--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel=".">
 	<link rel="stylesheet" href="./css/style.css">
 	
 	<title>Blueeasy</title>
 </head>
 <body>
+
+<nav>
+	<div class="d-flex justify-content-around">
+		<p class="logo">
+			BLU<span>E</span>ASSY
+		</p>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Features</a></li>
+			<li><a href="#">Portfolio</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
+	
+	
+</nav>
+
+<section class="hero">
+	<div id="wrapper">
+		<h1>“I’m looking for the unexpected. I’m looking for things I’ve never seen before.” </h1>
+	</div>
+</section>
 
 
 
