--- a/index.html
+++ b/index.html
@@ -5,37 +5,77 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel=".">
+	
+	
 	<link rel="stylesheet" href="./css/style.css">
 	
 	<title>Blueeasy</title>
 </head>
 <body>
+<header>
+	<nav>
+		<div id="logonav" class="wrapper d-flex justify-content-between">
+			<p>BLU<span>E</span>ASY</p>
+			<ul class="d-flex justify-content-between align-items-center">
+				<li><a class="active" href="">HOME</a></li>
+				<li><a href="">SERVICES</a></li>
+				<li><a href="">FEATURES</a></li>
+				<li><a href="">PORTFOLIO</a></li>
+				<li><a href="">CONTACT</a></li>
+			</ul>
+		</div>
+	</nav>
+	<h1 class="text-center">
+		<span>
+		"I'M LOOKING FOR THE UNEXPECTED.
+	</span><br>
+		<span>I'M LOOKING FOR THINGS I'VE NEVER SEEN BEFORE.</span></h1>
+</header>
 
-<nav>
-	<div class="d-flex justify-content-around">
-		<p class="logo">
-			BLU<span>E</span>ASSY
-		</p>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Features</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
+<main>
+<section class= "blueback d-flex flex-column">
+	<div class="servicesfont" id="services">
+		<h2>Services</h2><br>
+		
+		<div class="d-flex">
+			<article>
+				<div class="coffee">
+					<img src="./img/cup.png">
+					<h2>COFFEE</h2>
+					<p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+				</div>
+			</article>
+			
+			<article>
+				<div class="instant">
+					<img src="./img/instant.png">
+					<h2>INSTANT</h2>
+					<p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+				</div>
+			</article>
+			
+			<article>
+				<div class="serious">
+					<img src="./img/serious.png">
+					<h2>SERIOUS</h2>
+					<p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+				</div>
+			</article>
+			
+			<article>
+				<div class="frame">
+					<img src="./img/frame.png">
+					<h2>FRAME</h2>
+					<p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+				</div>
+			</article>
+		</div>
 	</div>
 	
-	
-</nav>
 
-<section class="hero">
-	<div id="wrapper">
-		<h1>“I’m looking for the unexpected. I’m looking for things I’ve never seen before.” </h1>
-	</div>
+
 </section>
-
-
+</main>
 
 
 </body>
