--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <main>
 <section class= "blueback d-flex flex-column">
 	<div class="servicesfont" id="services">
-		<h2>Services</h2><br>
+		<h2>SERVICES</h2><br>
 		
 		<div class="d-flex">
 			<article>
@@ -71,6 +71,29 @@
 			</article>
 		</div>
 	</div>
+</section>
+
+
+<section class="d-flex">
+	<div class="defaultsection d-flex">
+		<div>
+			<h2>JUST DEFAULT SECTION</h2>
+			<article>
+				<p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love
+					unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
+					Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.
+				</p>
+			</article>
+		</div>
+		
+		<article>
+			<div class="d-flex justify-content-end">
+				<img src="./img/video.jpg">
+				
+			</div>
+		</article>
+	</div>
+	
 	
 
 
