--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 </section>
 
 
-<section class="d-flex">
+<section class="d-flex sectionpad">
 	<div class="defaultsection d-flex">
 		<div>
 			<h2>JUST DEFAULT SECTION</h2>
 			<article>
-				<p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love
+				<p class="ppad">Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love
 					unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.
 					Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.
 				</p>
